# auth-template

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/config/: settings.py
backend/src/router/: auth.py
backend/src/util/: __init__.py
frontend/: .gitignore  Dockerfile  capacitor.config.ts  package.json  svelte.config.js  vite.config.ts
frontend/src/lib/auth/: auth.service.ts
frontend/src/lib/platform/: detect.ts  index.ts  types.ts
frontend/src/lib/types/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/callback/android/authentik/: +page.svelte
frontend/src/routes/callback/android/google/: +page.svelte
frontend/src/routes/login/: +page.svelte
